--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>Kavinograph</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
+  name="description"           
+  content="Kavinograph aka Kavin Arulnambi is a Visual Communication student based in Chennai.
+           Having a background in Aesthetics, Music, 3D renders, Video and Photo Manipulation.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
