--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 </head>
 <body>
   <app-root></app-root>
