--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,36 @@
   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+      <style>
+        app-root {
+          color: whitesmoke;
+          background-color: black;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+        }
+        .loader {
+          border: 16px solid transparent;
+          border-top: 16px solid red;
+          border-bottom: 16px solid red;
+          border-radius: 50%;
+          width: 120px;
+          height: 120px;
+          animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+          0% { transform: rotate(0deg); }
+          100% { transform: rotate(360deg); }
+        }
+      </style>
+      <h1 class="mb-5 text-center"><strong>KAVINOGRAPH<span style="color: red;">.</span></strong></h1>
+      <div class="loader"></div>
+      <h2 class="mt-5 text-center">Loading...</h2>
+  </app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
